<resources>
    <string name="app_name">Hospital</string>
    <string name="dummy_content">医院管理系统</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_user">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">用户名不能为空</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">用户名必填</string>

    <string name="action_settings">Settings</string>
</resources>
